Rename project from "ai-tone-writer-bot" to "ai-tone-tuner-bot" in package.json.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-tone-writer-bot",
+  "name": "ai-tone-tuner-bot",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
