--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prisma": "^6.18.0",
     "telegraf": "^4.16.3",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
