--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "telegraf": "^4.16.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3",
-    "winston": "^3.18.3"
+    "winston": "^3.18.3",
+    "yookassa": "^0.1.1"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
