Update .gitignore to include migrations directory and reorganize log entries. Remove outdated migration SQL file for user, referral, and payment tables from the database

--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,13 @@ node_modules
 dist
 package-lock.json
 
-
 /src/generated/prisma
-
-# Logs
-logs.txt
-logs/
 
 # Local sqlite database
 /src/db/dev.db
 /src/db/*.db-journal
+/src/db/migrations
+
+# Logs
+logs.txt
+logs/
