Implement cron job for daily limit resets with optional testing interval
Add functionality to schedule daily limit resets for users at midnight server time, with an optional environment variable TEST_CRON_INTERVAL for testing purposes. Enhance logging for better tracking of reset operations and errors. Update .env.example and package.json to support the new cron job configuration

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,6 @@ OPENAI_KEY=
 YOOKASSA_SHOP_ID=
 YOOKASSA_SECRET=
 YOOKASSA_URL=
+
+# Cron Testing (optional): TEST_CRON_INTERVAL="*/1 * * * *" (каждую минуту)
+TEST_CRON_INTERVAL=
