Refactor daily limit reset logic in resetDailyLimit.ts to improve efficiency and clarity. Remove test cron interval support and streamline user updates by utilizing a single query for referrals. Update .env.example and package.json to reflect the removal of the TEST_CRON_INTERVAL variable

--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "migrate:deploy": "npx prisma migrate deploy",
     "db:reset": "npx prisma migrate reset --force --skip-seed && npx prisma generate",
     "prisma:generate": "npx prisma generate",
-    "prisma:studio": "npx prisma studio",
-    "cron:test": "TEST_CRON_INTERVAL='*/1 * * * *' npx ts-node-dev src/index.ts"
+    "prisma:studio": "npx prisma studio"
   },
   "prisma": {
     "schema": "src/db/schema.prisma"
